# mrlink2

./: LICENSE  LICENSE.md  README.md  convert_sumstats.py  mr_link_2_standalone.py  pyproject.toml  requirements.txt  test_commands.sh
.github/workflows/: test.yml
R/: mr_link_2_functions.R
example_files/: gwas_catalog_format.parq  gwas_catalog_format.txt  non_causal_exposure.parq  non_causal_exposure.txt  non_causal_outcome.parq  non_causal_outcome.txt  reference_cohort.bed  reference_cohort.frq  yes_causal_exposure.parq  yes_causal_exposure.txt  yes_causal_outcome.parq
genotype_files/: reference_cohort.bim  reference_cohort.fam
metabolite_true_positives/: kegg_true_positive_links.txt  metacyc_true_positive_links.txt  wikipathways_true_positives.txt
other_mr_methods_reference/: mr_methods.R
r_analyses/: colocalization_analysis.R  mr_analyses.R
simulations/: README.md  simulate_phenotypes_run_mr.py
testing_files/: yes_causal_outcome.txt
tests/: integration_tests_mr_link_2.py  reviewer_4_tests.py  test_for_r_and_python_concordance.py  unit_tests_mr_link_2.py
